2008-01-13  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* doc/automake.texi (amhello Explained): Fix odd sentence.
	Report by nightstrike@gmail.com.

2008-01-12  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* m4/init.m4 (_AC_AM_CONFIG_HEADER_HOOK): Rewrite to be more
	resistant to different quoting styles of $1.

	Clarify texinfo.tex and TEXINFO_TEX semantics.
	* doc/automake.texi (Texinfo): Clarify that by default,
	texinfo.tex is searched in the same directory as the Makefile.am
	that needs it.  Clarify that TEXINFO_TEX has precedence over
	AC_CONFIG_AUX_DIR, and that it requires the user to install and
	distribute it.
	* tests/txinfo22.test: Ensure TEXINFO_TEX is not distributed.
	* THANKS: Update.
	Reports by Dilyan Palauzov and Roumen Petrov.

2008-01-11  Bruno Haible  <bruno@clisp.org>
	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* tests/output-order.test: New test, for the stable output fix.
	* tests/Makefile.am: Update.

2008-01-08  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* Makefile.am (dist-hook): New, ensure world-executable tests.
	* THANKS: Update.
	Report by Arto C. Nirkko.

	* tests/acloca20.test: Use `--force' with the second $AUTOCONF,
	to force update on fast machines where both autoconf invocations
	happen within the same second.
	Report by Greg Schafer.

2008-01-07  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* automake.in (scan_autoconf_files): Sort loop over
	%required_aux_file, for stable verbose output.
	Report by Bruno Haible.

	* lib/config.guess, lib/config.sub, lib/texinfo.tex: Sync from
	upstream.

	* tests/ccnoco.test (Mycomp): Use a tighter match for -c -o,
	to avoid matching for example `LDFLAGS=-Wl,--sort-common'.
	* THANKS: Update.
	Report and analysis by Carsten Lohrke and Mike Frysinger.

2008-01-07  Stepan Kasal  <skasal@redhat.com>

	* automake.in (handle_texinfo_helper, handle_lib_objects): Fix
	typos in comments.

2008-01-02  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Bump copyright years.