@@ -1,5 +1,5 @@
 #! /bin/sh
-# Copyright (C) 2006, 2007  Free Software Foundation, Inc.
+# Copyright (C) 2006, 2007, 2008  Free Software Foundation, Inc.
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -46,7 +46,7 @@ END
 cp one.c two.c
 
 ./configure
-unset TESTS
+unset TESTS || :
 $MAKE check
 test -f ok
 EXEEXT=.bin $MAKE -e print-tests >output
