@@ -1,5 +1,5 @@
 #! /bin/sh
-# Copyright (C) 2007  Free Software Foundation, Inc.
+# Copyright (C) 2007, 2008  Free Software Foundation, Inc.
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -89,7 +89,7 @@ spawn $env(MAKE) -e check
 expect eof
 END
 
-unset TESTS
+unset TESTS || :
 
 AM_COLOR_TESTS=always $MAKE -e check >stdout && { cat stdout; exit 1; }
 cat stdout
