@@ -1,5 +1,10 @@
 2008-01-13  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	Fix Heisenbug trying to unset a sometimes-not-set variable.
+	* tests/check5.test: Do not error out upon `unset TESTS' due to
+	`set -e', in case TESTS was not set.
+	* tests/color.test: Likewise.
+
 	* doc/automake.texi (amhello Explained): Fix odd sentence.
 	Report by nightstrike@gmail.com.
 
